<resources>
    <string name="app_name">work2</string>
    <string name="welcome_text">欢迎登录</string>
    <string name="hint_text">请登录您的账户</string>
    <string name="email_hint">请输入邮箱</string>
    <string name="input_email">请输入邮箱</string>
    <string name="input_password">请输入密码</string>
    <string name="forget_password">忘记密码?</string>
    <string name="login">登录</string>
    <string name="home">首页</string>
    <string name="information">信息</string>
    <string name="me">我的</string>
    <string name="my_collect">我的收藏</string>
    <string name="personal_information">个人信息</string>
    <string name="browsing_history">浏览历史</string>
    <string name="settings">设置</string>
    <string name="about_us">关于我们</string>
    <string name="feedback">意见反馈</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>