<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Fragment容器 -->
        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bottom_navigation" />

        <LinearLayout
            android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_gray"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">
            <!--首页-->
            <LinearLayout
                android:id="@+id/btn_home"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingHorizontal="12dp"
                android:paddingVertical="8dp">

                <ImageView
                    android:id="@+id/iv_home"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:contentDescription="@string/home"
                    android:src="@mipmap/ic_home_unselected" />

                <TextView
                    android:id="@+id/tv_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/home"
                    android:textColor="@color/gray"
                    android:textSize="16sp" />
            </LinearLayout>

            <!--信息-->
            <LinearLayout
                android:id="@+id/btn_information"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingHorizontal="12dp"
                android:paddingVertical="8dp">

                <ImageView
                    android:id="@+id/iv_information"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:contentDescription="@string/information"
                    android:src="@mipmap/ic_information_unselected" />

                <TextView
                    android:id="@+id/tv_information"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/information"
                    android:textColor="@color/gray"
                    android:textSize="16sp" />
            </LinearLayout>

            <!--我的-->
            <LinearLayout
                android:id="@+id/btn_me"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingHorizontal="12dp"
                android:paddingVertical="8dp">

                <ImageView
                    android:id="@+id/iv_me"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:contentDescription="@string/me"
                    android:src="@mipmap/ic_me_selected" />

                <TextView
                    android:id="@+id/tv_me"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/me"
                    android:textColor="@color/blue"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>






</FrameLayout>